--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -99,6 +99,7 @@
     <script type="text/javascript">
         $(document).ready(function() {
             $("#datatable").DataTable({
+                stateSave: true,
                 "columnDefs": [
                     {
                         "type": "natural",
