Jira commenting for updating number of lanes requested

--- a/core/templates/core/sequencing_update.html
+++ b/core/templates/core/sequencing_update.html
@@ -43,7 +43,9 @@
                     </tr>
                 {% endfor %}
                 </thead>
+                {{remember_me}}
             </table>
+
          </fieldset>
 
          <br>
