--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -23,8 +23,11 @@
                         <th class="jiraticket">Jira Ticket</th>
                     {% endif %}
 
-                    <th>Submission date</th>
+                    <th>Submission Date</th>
                     <th>Most Recent Lane Received </th>
+                    {% if library_type == 'dlp' %}
+                        <th>Imported</th>
+                    {% endif %}
                     <th class="no-sort-col"></th>
                 </tr>
             </thead>
@@ -79,6 +82,13 @@
                             <td>{{sequencing.most_recent_lane}}</td>
                         {% else %}
                             <td></td>
+                        {% endif %}
+                        {% if library_type == 'dlp' %}
+                            {% if sequencing.number_of_lanes_requested == sequencing.dlplane_set.all.count %}
+                                <td>&#10004;</td>
+                            {% else %}
+                                <td>&times;</td>
+                            {% endif %}
                         {% endif %}
                         <td>
                             <div style="float: right; min-width: 69px">
