--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -24,7 +24,8 @@
                     {% endif %}
 
                     <th>Submission Date</th>
-                    <th>Most Recent Lane Received </th>
+                    <th>Most Recent Lane Received</th>
+                    <th>Lane Requested Date</th>
                     {% if library_type == 'dlp' %}
                         <th>Imported</th>
                     {% endif %}
@@ -83,6 +84,7 @@
                         {% else %}
                             <td></td>
                         {% endif %}
+                        <td>{{ sequencing.lane_requested_date }}</td>
                         {% if library_type == 'dlp' %}
                             {% if sequencing.number_of_lanes_requested == sequencing.dlplane_set.all.count %}
                                 <td>&#10004;</td>
