--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -8,7 +8,9 @@
 <div class="container" style="padding: 0; margin-bottom: 5px;">
     <h4 style="float: left;">Select a sequencing to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float: right; margin-top: 5px;" href="{% url library_type|add:':sequencing_create' %}">Add Sequencing</a>
-    <a class="btn btn-primary btn-sm" id="import-button" onclick="importOnClick()" style="float: right; margin-right: 5px; margin-top: 5px;">All</a>
+    {% if library_type == 'dlp' %}
+        <a class="btn btn-primary btn-sm" id="import-button" onclick="importOnClick()" style="float: right; margin-right: 5px; margin-top: 5px;">All</a>
+    {% endif %}
 </div>
 <div class="container" style="background-color: #F5F5F5;">
     <div class="table-responsive">
@@ -125,7 +127,10 @@
                 }
             ]
         });
-        table.column( 8 ).search("✔|×",true,false).draw();
+
+        if("{{library_type}}" == 'dlp'){
+            table.search('').columns().search('').draw();
+        }
     });
 
 
@@ -151,7 +156,7 @@
         else if(elem.innerHTML == "Not Imported" ){
             elem.innerHTML = "All";
             $(elem).removeClass("btn-danger").addClass("btn-primary");
-            table.column( 8 ).search("✔|×",true,false).draw();
+            table.search('').columns().search('').draw();
         }
     }
 </script>
