filed altered for sample, few views editted

--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -56,7 +56,7 @@
 <!-- Lane Detail -->
 <div class="container detail-bordered-container">
     <h4>Lane Details</h4>
-    {% if sequencing.dlplane_set.all or sequencing.pballane_set.all or sequencing_tenxlane_set.all %}
+    {% if sequencing.dlplane_set.all or sequencing.pballane_set.all or sequencing.tenxlane_set.all %}
         <div class="table">
             <table class="table">
                 <thead>
