--- a/core/templates/core/sequencing_create.html
+++ b/core/templates/core/sequencing_create.html
@@ -53,3 +53,23 @@
     <br>
 </div>
 {% endblock %}
+
+{% block scripts %}
+<script>
+    $(document).ready(function(){
+     var prev = document.referrer
+     if (prev.indexOf("pool") > -1 &&
+         prev.indexOf("detail") > -1 ){
+          var field = document.getElementById("id_tenx_pool")
+         var res = prev.split("/");
+         for (var i=0, len=field.options.length; i<len; i++) {
+            opt = field.options[i];
+            if (res[res.length-1] == opt.value) {
+                opt.selected = true
+                break;
+            }
+        }
+     }
+    });
+</script>
+{% endblock %}
