--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -122,6 +122,18 @@
                     "targets": "jiraticket",
                 },
                 {
+                    "type": "date",
+                    "targets": 5,
+                },
+                {
+                    "type": "date",
+                    "targets": 6,
+                },
+                {
+                    "type": "date",
+                    "targets": 7,
+                },
+                {
                     "orderable": false,
                     "targets": "no-sort-col",
                 }
