--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -64,7 +64,11 @@
                 <thead>
                     <tr>
                         <th>Flow Cell ID</th>
+                        {% if library_type != 'tenx' %}
                         <th>Path To Archive</th>
+                        {% else %}
+                        <th>Tantalus Dataset</th>
+                        {% endif %}
                         <th>Sequencing Date</th>
                         <th></th>
                     </tr>
@@ -97,7 +101,16 @@
                         {% for lane in sequencing.tenxlane_set.all %}
                             <tr>
                                 <td>{{ lane.flow_cell_id }}</td>
-                                <td>{{ lane.path_to_archive }}</td>
+                                {% if lane.tantalus_datasets %}
+                                <td>
+                                {% for id in lane.tantalus_datasets %}
+                                    <a href="https://tantalus.canadacentral.cloudapp.azure.com/datasets/{{id}}"></i> {{id}}</a>
+                                {% endfor %}
+                                </td>
+                                {% else %}
+                                <td>None</td>
+                                {% endif %}
+
                                 <td style="min-width: 10em">
                                     <a href="{% url library_type|add:':lane_update' pk=lane.pk %}"><i class="fa fa-pencil" style="color: orange;"></i> update</a>
                                     <a href="{% url library_type|add:':lane_delete' pk=lane.pk %}"><i class="icon-remove-sign" style="color: red"></i> delete</a>
