--- a/core/templates/core/sequencing_list.html
+++ b/core/templates/core/sequencing_list.html
@@ -125,7 +125,8 @@
                     "orderable": false,
                     "targets": "no-sort-col",
                 }
-            ]
+            ],
+            "order": [[ 5, "desc" ]]
         });
 
         if("{{library_type}}" == 'dlp'){
