feat: make sublibs searchable

--- a/core/templates/core/sequencing_detail.html
+++ b/core/templates/core/sequencing_detail.html
@@ -124,7 +124,7 @@
                                 {% if lane.gsc_sublibrary_names %}
                                 <td>
                                     {% for sublibrary in lane.gsc_sublibrary_names %}
-                                    {{sublibrary}}, 
+                                    {{sublibrary}}
                                     {% endfor %}
                                 </td>
                                 {% else %}
